--- a/app/src/main/res/layout/goods_info_modify_activity.xml
+++ b/app/src/main/res/layout/goods_info_modify_activity.xml
@@ -8,30 +8,43 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <TextView
-        android:id="@+id/txt_goods_info_modify_goods_name"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:gravity="center_vertical"
-        android:text="@string/activity_goods_info_modify_goods_name"
-        android:textSize="20dp" />
+    <ImageView
+        android:id="@+id/img_goods_info_modify_goods_image"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:src="@drawable/goods_add_image" />
 
     <EditText
         android:id="@+id/edt_goods_info_modify_goods_name"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_alignBottom="@id/txt_goods_info_modify_goods_name"
         android:layout_alignParentRight="true"
+        android:layout_alignTop="@id/img_goods_info_modify_goods_image"
         android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@id/txt_goods_info_modify_goods_name"
+        android:layout_marginTop="5dp"
+        android:layout_toRightOf="@id/img_goods_info_modify_goods_image"
         android:gravity="center_vertical"
+        android:hint="@string/activity_goods_info_modify_goods_name"
+        android:singleLine="true" />
+
+    <EditText
+        android:id="@+id/edt_goods_info_modify_goods_price"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/edt_goods_info_modify_goods_name"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_toRightOf="@id/img_goods_info_modify_goods_image"
+        android:gravity="center_vertical"
+        android:hint="@string/activity_goods_info_modify_goods_price"
         android:singleLine="true" />
 
     <TextView
         android:id="@+id/txt_goods_info_modify_goods_amounts"
         android:layout_width="100dp"
         android:layout_height="50dp"
-        android:layout_below="@id/edt_goods_info_modify_goods_name"
+        android:layout_below="@id/img_goods_info_modify_goods_image"
         android:layout_marginTop="5dp"
         android:gravity="center_vertical"
         android:text="@string/activity_goods_info_modify_goods_amounts"
@@ -43,7 +56,7 @@
         android:layout_height="50dp"
         android:layout_alignBottom="@id/txt_goods_info_modify_goods_amounts"
         android:layout_alignParentRight="true"
-        android:layout_below="@id/edt_goods_info_modify_goods_name"
+        android:layout_below="@id/img_goods_info_modify_goods_image"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
         android:layout_toRightOf="@id/txt_goods_info_modify_goods_amounts"
@@ -51,33 +64,10 @@
         android:singleLine="true" />
 
     <TextView
-        android:id="@+id/txt_goods_info_modify_goods_price"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_below="@id/txt_goods_info_modify_goods_amounts"
-        android:layout_marginTop="5dp"
-        android:gravity="center_vertical"
-        android:text="@string/activity_goods_info_modify_goods_price"
-        android:textSize="20dp" />
-
-    <EditText
-        android:id="@+id/edt_goods_info_modify_goods_price"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_alignBottom="@id/txt_goods_info_modify_goods_price"
-        android:layout_alignParentRight="true"
-        android:layout_below="@id/txt_goods_info_modify_goods_amounts"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
-        android:layout_toRightOf="@id/txt_goods_info_modify_goods_price"
-        android:gravity="center_vertical"
-        android:singleLine="true" />
-
-    <TextView
         android:id="@+id/txt_goods_info_modify_goods_kind"
         android:layout_width="100dp"
         android:layout_height="50dp"
-        android:layout_below="@id/txt_goods_info_modify_goods_price"
+        android:layout_below="@id/txt_goods_info_modify_goods_amounts"
         android:layout_marginTop="5dp"
         android:gravity="center_vertical"
         android:text="@string/activity_goods_info_modify_goods_kind"
@@ -89,7 +79,7 @@
         android:layout_height="50dp"
         android:layout_alignBottom="@id/txt_goods_info_modify_goods_kind"
         android:layout_alignParentRight="true"
-        android:layout_below="@id/edt_goods_info_modify_goods_price"
+        android:layout_below="@id/edt_goods_info_modify_goods_amounts"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
         android:layout_toRightOf="@id/txt_goods_info_modify_goods_kind"
@@ -122,7 +112,7 @@
     <TextView
         android:id="@+id/txt_goods_info_modify_goods_description"
         android:layout_width="100dp"
-        android:layout_height="95dp"
+        android:layout_height="200dp"
         android:layout_below="@id/txt_goods_info_modify_goods_brief_description"
         android:layout_marginTop="5dp"
         android:gravity="center_vertical"
@@ -132,8 +122,8 @@
     <EditText
         android:id="@+id/edt_goods_info_modify_goods_description"
         android:layout_width="wrap_content"
-        android:layout_height="95dp"
-        android:layout_alignBottom="@id/txt_goods_add_goods_description"
+        android:layout_height="200dp"
+        android:layout_alignBottom="@id/txt_goods_info_modify_goods_description"
         android:layout_alignParentRight="true"
         android:layout_below="@id/edt_goods_info_modify_goods_brief_description"
         android:layout_marginLeft="10dp"
@@ -141,21 +131,11 @@
         android:layout_toRightOf="@id/txt_goods_info_modify_goods_description"
         android:gravity="start" />
 
-    <TextView
-        android:id="@+id/txt_goods_info_modify_goods_images"
-        android:layout_width="100dp"
-        android:layout_height="120dp"
-        android:layout_below="@id/txt_goods_info_modify_goods_description"
-        android:layout_marginTop="5dp"
-        android:gravity="center_vertical"
-        android:text="@string/activity_goods_info_modify_goods_images"
-        android:textSize="20dp" />
-
     <Button
         android:id="@+id/btn_goods_info_modify_modify"
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:layout_below="@id/txt_goods_info_modify_goods_images"
+        android:layout_below="@id/edt_goods_info_modify_goods_description"
         android:layout_marginLeft="45dp"
         android:layout_marginRight="45dp"
         android:layout_marginTop="5dp"
